--- a/style.css
+++ b/style.css
@@ -16,3 +16,25 @@ nav h2 {
     margin-left: 20px;
     margin-top: 6px;
 }
+
+#portfolio {
+    background-color: aqua;
+    height: auto;
+    margin-top: 50px;
+}
+
+#portfolio h2 {
+    padding-top: 50px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#portfolio img {
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
+}
+/* 
+#portfolio .container {
+    margin-left: 5%;
+} */
