--- a/style.css
+++ b/style.css
@@ -44,3 +44,8 @@ nav h2 {
      justify-content: center;
      gap: 80px;
  }
+
+ #about-me div {
+    text-align: center;
+    padding: 78px 386px;
+ }
