--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav h2 {
 #portfolio img {
     width: 250px;
     height: auto; 
-    border-radius: 20px;
+    border-radius: 50px;
     margin-bottom: 100px;
 }
  #portfolio .row {
@@ -49,3 +49,20 @@ nav h2 {
     text-align: center;
     padding: 78px 386px;
  }
+
+ #contacto {
+    background-color: rgb(29, 68, 68);
+    text-align: center;
+ }
+
+#contacto .formu {
+    padding-top: 60px;
+}
+
+#contacto h2 {
+    padding-bottom: 30px;
+}
+
+#contacto label {
+    margin-bottom: 10px;
+}
